--- a/symfonyCc/templates/activity/edit.html.twig
+++ b/symfonyCc/templates/activity/edit.html.twig
@@ -3,11 +3,14 @@
 {% block title %}Edit Activity{% endblock %}
 
 {% block body %}
-    <h1>Edit Activity</h1>
+    <h1>Modifier activité </h1>
 
-    {{ include('activity/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_activity_index') }}">back to list</a>
-
-    {{ include('activity/_delete_form.html.twig') }}
+    <div class="container">
+    {{ include('activity/_form.html.twig', {'button_label': 'Modifier'}) }}
+    <p></p>
+    <p>
+        <a class="btn btn-dark" href="{{ path('app_activity_index') }}">Retour à la liste</a>
+        {{ include('activity/_delete_form.html.twig') }}
+    </p>
+    </div>
 {% endblock %}
