--- a/symfonyCc/templates/activity/show.html.twig
+++ b/symfonyCc/templates/activity/show.html.twig
@@ -3,14 +3,11 @@
 {% block title %}Activity{% endblock %}
 
 {% block body %}
-    <h1>Activity</h1>
+    <h1>Activité</h1>
 
-    <table class="table">
+    <div class="container">
+    <table class="table table-bordered">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ activity.id }}</td>
-            </tr>
             <tr>
                 <th>Name</th>
                 <td>{{ activity.name }}</td>
@@ -22,9 +19,10 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_activity_index') }}">back to list</a>
-
-    <a href="{{ path('app_activity_edit', {'id': activity.id}) }}">edit</a>
-
+    <a class="btn btn-dark" href="{{ path('app_activity_index') }}">Retour à la liste</a>
+    <p></p>
+    <a class="btn btn-success" href="{{ path('app_activity_edit', {'id': activity.id}) }}">Modifier</a>
+    <p></p>
     {{ include('activity/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
