--- a/symfonyCc/templates/base.html.twig
+++ b/symfonyCc/templates/base.html.twig
@@ -15,7 +15,43 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
         {% endblock %}
     </head>
+
+    <style>
+
+        nav {
+            background-color: #5eb5e0;
+        }
+
+        h1 {
+            margin-top : 25px ;
+            margin-bottom: 25px;
+            text-align: center;
+        }
+
+        .btn {
+            border-radius: 23px;
+        }
+
+        table {
+            margin-top: 25px;
+        }
+    </style>
+
     <body>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Symfony CC</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+
+                </ul>
+            </div>
+        </div>
+    </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
+
