--- a/symfonyCc/templates/activity/show.html.twig
+++ b/symfonyCc/templates/activity/show.html.twig
@@ -14,7 +14,7 @@
             </tr>
             <tr>
                 <th>Description</th>
-                <td>{{ activity.description }}</td>
+                <td>{{ activity.description | raw }}</td>
             </tr>
         </tbody>
     </table>
